--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "screenshot-crawler",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Screenshot crawler, taking instructions from YAML file and outputting TAP",
   "main": "index.js",
   "bin": "index.js",
@@ -14,9 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/emilbayes/screenshot-crawler.git"
   },
-  "keywords": [
-
-  ],
+  "keywords": [],
   "author": "Emil Bay <github@tixz.dk>",
   "license": "ISC",
   "bugs": {
